--- a/sandbox/styles.css
+++ b/sandbox/styles.css
@@ -9,35 +9,50 @@
   padding: 1em;
 }.container {
   display: grid;
-  grid-template-columns: repeat(3, 2fr);
+  width: 100%;
+  grid-template-columns: 450px 1fr;
   grid-auto-rows: minmax(100px, auto);
 }
 
 .container__graph {
     grid-column: 1 / 5;
     grid-row: 1 / 2;
+    border: 1px solid black;
+}
 
-    border: 1px dashed black;
+.container__graph-info {
+    margin-left: 12px;
+}
+
+.container__graph-area {
+    max-width: 800px;
+    max-height: 400px;
+    border: 1px dotted gray;
+    margin-left: 80px;
+    margin-top: 4px;
 }
 
 .container__graph-data {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
+    margin-bottom: 4px;
 }
 
 .container__graph-config {
-    grid-column: 2 / 5;
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
+    margin-bottom: 4px;
 }
 
 .container__form {
     grid-column: 5/ 6;
     grid-row: 1 / 4;
+    min-width: 400px;
 }
 
 .form-wrapper {
     overflow-y: scroll;
-    max-height: 600px;
+    max-height: 80vh;
 }
 
 .json-data-container {
