Remove refresh option from Sandbox. Add fullscreen mode to Sandbox

--- a/sandbox/styles.css
+++ b/sandbox/styles.css
@@ -54,6 +54,10 @@
     min-width: 400px;
 }
 
+.cross-icon:hover {
+    cursor: pointer;
+}
+
 .form-wrapper {
     overflow-y: scroll;
     max-height: 70vh;
