Feature/sandbox improvements (#27)
* Add componentWillUnmount to Graph component

* Helper imports naming in lowerCamelCase :camel:

* Remove refresh option from Sandbox. Add fullscreen mode to Sandbox

* Add sandbox link to gif in README

* Remove some repeated jsx in sandbox render

--- a/sandbox/styles.css
+++ b/sandbox/styles.css
@@ -54,6 +54,14 @@
     min-width: 400px;
 }
 
+.cross-icon {
+    padding-right: 8px;
+}
+
+.cross-icon:hover {
+    cursor: pointer;
+}
+
 .form-wrapper {
     overflow-y: scroll;
     max-height: 70vh;
