--- a/sandbox/styles.css
+++ b/sandbox/styles.css
@@ -15,7 +15,7 @@
 }
 
 .container__graph {
-    grid-column: 1 / 5;
+    grid-column: 1 / 4;
     grid-row: 1 / 2;
     border: 1px solid black;
 }
@@ -32,26 +32,30 @@
     max-width: 800px;
     max-height: 400px;
     border: 1px dotted gray;
-    margin-left: 80px;
+    margin-left: 20px;
     margin-top: 4px;
+    z-index: 1;
 }
 
 .container__graph-data {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     margin-bottom: 4px;
+    z-index: 2;
 }
 
 .container__graph-config {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     margin-bottom: 4px;
+    z-index: 2;
 }
 
 .container__form {
     grid-column: 5/ 6;
     grid-row: 1 / 4;
     min-width: 400px;
+    z-index: 3;
 }
 
 .cross-icon {
