Added overflow:hidden to container graph area

--- a/sandbox/styles.css
+++ b/sandbox/styles.css
@@ -1,17 +1,20 @@
-* {box-sizing: border-box;}
+* {
+    box-sizing: border-box;
+}
 .container {
-  margin: 4px;
-  overflow: hidden;
-  position: fixed;
+    margin: 4px;
+    overflow: hidden;
+    position: fixed;
 }
 
 .container > div {
-  padding: 1em;
-}.container {
-  display: grid;
-  width: 100%;
-  grid-template-columns: 450px 1fr;
-  grid-auto-rows: minmax(100px, auto);
+    padding: 1em;
+}
+.container {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 450px 1fr;
+    grid-auto-rows: minmax(100px, auto);
 }
 
 .container__graph {
@@ -29,12 +32,12 @@
 }
 
 .container__graph-area {
-    max-width: 800px;
     max-height: 400px;
     border: 1px dotted gray;
     margin-left: 20px;
     margin-top: 4px;
     z-index: 1;
+    overflow: hidden;
 }
 
 .container__graph-data {
@@ -88,5 +91,5 @@
 .invisible-button {
     background: transparent;
     border: none !important;
-    font-size:0;
+    font-size: 0;
 }
