Add a labelClass property to Node
The `labelClass` property can be used to pass a CSS class name to
the node, and it will be applied to its label.

--- a/sandbox/data/custom-node/res/styles/custom-node.css
+++ b/sandbox/data/custom-node/res/styles/custom-node.css
@@ -65,3 +65,12 @@
     width: 80%;
     height: 30%;
 }
+
+/* --- Node label style --- */
+
+.person-node-label {
+    fill: black;
+    text-shadow: rgb(255, 255, 255) 0px -2px 0px, rgb(255, 255, 255) 0px 2px 0px, rgb(255, 255, 255) 2px 0px 0px,
+        rgb(255, 255, 255) -2px 0px 0px;
+    transform: rotate(-25deg) translateX(40px) translateY(15px);
+}
